# unicorn

./: Cargo.toml  build.sh
.cargo/: config.toml
src/: config.rs  device.rs  dma.rs  dtb.rs  layout.rs  main.rs  manifest.rs  pci.rs  platform.rs
src/unicorn/: device.rs  dma.rs  init.rs  logic.rs  mod.rs  partition.rs  platform.rs  server.rs
src/utils/: gpt.rs  mbr.rs
