[package]
name = "unicorn"
version = "0.1.0"
edition = "2024"

[dependencies]
libglenda-rs = { path = "../../lib/libglenda-rs", features = ["rt-service"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
postcard = { version = "1.0", default-features = false, features = ["alloc"] }
virtio-common = { path = "../../drivers/virtio/common" }
